@@ -101,7 +101,10 @@ BerliOS Bugs are marked with (BerliOS #XXXX).
 * ldconfig: Only run full ldconfig, if we don't install into a FAKEROOT
   environment, else let ldconfig only create the symlinks correct
   (from Linux distributors - kukuk)
-
+* pam_unix/pam_pwdb: Use SIG_DFL instead of SIG_IGN for SIGCHLD
+  (from Linux distributors - kukuk)
+* Add parts of the first chunk of Steve Grubb's resource leak and
+  other fixes (from Linux distributors - kukuk)
 
 0.77: Mon Sep 23 10:25:42 PDT 2002
 
